--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -3,11 +3,9 @@
   "plugins": ["@typescript-eslint"],
   "extends": [
     "eslint:recommended",
+    "plugin:prettier",
     "plugin:react/recommended",
     "plugin:@typescript-eslint/recommended"
-    // Uncomment the following lines to enable eslint-config-prettier
-    // Is not enabled right now to avoid issues with the Next.js repo
-    // "prettier",
   ],
   "env": {
     "es6": true,
