--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-redux": "^7.2.4",
-    "recoil": "^0.2.0"
+    "recoil": "^0.2.0",
+    "zustand": "^3.5.0"
   },
   "devDependencies": {
     "@testing-library/react": "^11.2.5",
