--- a/package.json
+++ b/package.json
@@ -15,11 +15,14 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^1.5.1",
+    "jotai": "^0.16.4",
     "next": "latest",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-query": "^3.16.0",
     "react-redux": "^7.2.4",
     "recoil": "^0.2.0",
+    "valtio": "^1.0.4",
     "zustand": "^3.5.0"
   },
   "devDependencies": {
@@ -31,7 +34,7 @@
     "@typescript-eslint/parser": "^4.14.2",
     "babel-jest": "^26.6.3",
     "eslint": "^7.19.0",
-    "eslint-config-prettier": "^7.2.0",
+    "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^3.4.0",
     "eslint-plugin-react": "^7.19.0",
     "husky": "^4.2.3",
