--- a/package.json
+++ b/package.json
@@ -19,9 +19,10 @@
     "next": "latest",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
-    "react-query": "^3.16.0",
+    "react-query": "^3.18.1",
     "react-redux": "^7.2.4",
     "recoil": "^0.2.0",
+    "swr": "^0.5.6",
     "valtio": "^1.0.4",
     "xstate": "^4.19.1",
     "zustand": "^3.5.0"
